--- a/src/EChat.Frontend/package.json
+++ b/src/EChat.Frontend/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "@microsoft/signalr": "^8.0.7",
     "@ngrx/effects": "^18.1.1",
     "@ngrx/store": "^18.1.1",
     "@types/crypto-js": "^4.2.2",
