--- a/src/EChat.Backend/ChatApi/ChatApi.csproj
+++ b/src/EChat.Backend/ChatApi/ChatApi.csproj
@@ -11,9 +11,10 @@
 
   <ItemGroup>
 	<PackageReference Include="AutoMapper" Version="13.0.1" />
+	<PackageReference Include="Azure.AI.TextAnalytics" Version="5.3.0" />
+	<PackageReference Include="Microsoft.Azure.SignalR" Version="1.29.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.20.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
-	<PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.7" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.6">
 		<PrivateAssets>all</PrivateAssets>
 		<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
