--- a/src/EChat.Backend/docker-compose.override.yml
+++ b/src/EChat.Backend/docker-compose.override.yml
@@ -9,7 +9,10 @@ services:
       - AllowedCORSOrigins=${AllowedCORSOrigins}
       - UseCORS=${UseCORS}
       - ConnectionStrings__MessageDb=${ConnectionStrings__MessageDb}
+      - ConnectionStrings__Signal=${ConnectionStrings__Signal}
       - EFCreateDatabase=${EFCreateDatabase}
+      - TextAnalytics__Endpoint=${TextAnalytics__Endpoint}
+      - TextAnalytics__ApiKey=${TextAnalytics__ApiKey}
     volumes:
       - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
       - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
