--- a/src/EChat.Frontend/package.json
+++ b/src/EChat.Frontend/package.json
@@ -9,6 +9,7 @@
     "test": "ng test",
     "test:ci": "ng test --no-watch --no-progress --browsers=ChromeHeadless",
     "coverage": "ng test --no-watch --code-coverage",
+    "environment-start": "npm i && node custom-environment.config.js && ng serve",
     "lint": "ng lint"
   },
   "private": true,
